[package]
name = "hanzo-zap"
version = "0.6.75"
edition = "2021"
description = "ZAP (Zero-copy Agent Protocol) wire protocol for Hanzo products"
license = "MIT"
repository = "https://github.com/hanzonet/zap"

[dependencies]
tokio-rustls = "0.26"
webpki-roots = "0.26"
tracing = "0.1"
serde_json = "1"
[dependencies.serde]
version = "1"
features = ["derive"]
[dependencies.rustls]
version = "0.23"
default-features = false
features = ["std", "tls12", "ring"]

[dependencies.tokio]
version = "1"
features = ["io-util", "net", "rt", "sync", "macros"]